...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.exoplayer2.ui.PlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPlayerBackground"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

...
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/main_margin"
                android:orientation="vertical"
                android:scrollbars="vertical">

                <TextView
                    android:id="@+id/descriptionShortTv"
                    style="@style/AppTheme.TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/main_margin"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="@dimen/main_margin"
...
